# torch_icnn

./: .gitignore  README.md  main.py  pyproject.toml
icnn/: networks.py
tests/: test_edge_cases.py  test_icnn_networks.py  test_interactions.py  test_networks.py  test_utils.py
tests/notebooks/: dummy_univariate.ipynb
torch_icnn/: networks.py  validation.py
