[project]
name = "icnn"
version = "0.1.0"
description = "ICNN-inspired feedforward neural networks in PyTorch."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch", 
    "torchvision", 
    "numpy",
    "graphviz>=0.21",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.1",
    "marimo[recommended]>=0.18.4",
]

[tool.marimo.runtime]
pythonpath = ["."]